Fixed card alignment

--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,7 @@
   font-style: italic;
   color: gray;
 }
+
+.dg_card_alignment {
+  text-align: left;
+}
